--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
             justify-content: center;
             align-items: center;
             text-align: center;
-            background-image: url('https://cdn.gamestatic.net/files/editor_uploads/NikolayD/2025/skript-dlya-roblox-99-nights-in-the-forest_1.jpg');
+            background-image: url('https://i.ytimg.com/vi/TQog7kJzdi0/maxresdefault.jpg');
             background-size: cover;
             background-position: center;
             overflow: hidden;
@@ -461,8 +461,8 @@
             <section class="hero-banner">
                 <div class="script-info">
                     <span class="script-tag">Popular Script</span>
-                    <h1>99 Nights in the Forest</h1>
-                    <p>A great script for 99 Nights in the Forest with features like Kill Aura, Auto Farm Tree, Auto Fill Hunger, and much more.</p>
+                    <h1>Steal a Brainrot</h1>
+                    <p>Auto steal brainrot , spawn brainrot, wall hack,no hit!</p>
                     <div class="script-meta">
                         <span>
                             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="currentColor"><path d="M12 4.5C7 4.5 2.73 7.61 1 12c1.73 4.39 6 7.5 11 7.5s9.27-3.11 11-7.5c-1.73-4.39-6-7.5-11-7.5zM12 17c-2.76 0-5-2.24-5-5s2.24-5 5-5 5 2.24 5 5-2.24 5-5 5zm0-8c-1.66 0-3 1.34-3 3s1.34 3 3 3 3-1.34 3-3-1.34-3-3-3z"></path></svg>
@@ -511,10 +511,10 @@
                         </div>
                     </div>
                     <div class="script-card">
-                        <img src="https://scriptrb.com/cdn-cgi/image/medium-low,format=auto,height=420/https://scriptrb.com/img/uploads/68f35b90e492f_112513964134184795689.webp" alt="99 Nights in the Forest Script">
+                        <img src="https://scriptrb.com/cdn-cgi/image/medium-low,format=auto,height=420/https://scriptrb.com/img/uploads/68f35b90e492f_112513964134184795689.webp" alt="Steal a Brainrot Script">
                         <div class="card-content">
-                            <h3>99 Nights in the Forest</h3>
-                            <p>This script for 99 Nights in the Forest has Auto Days for fast AFK progress, God Mode for full invincibility, plus Chop & Aura and more OP features.</p>
+                            <h3>Steal a Brainrot</h3>
+                            <p>Another great brainrot script with AFK progress, god mode and many more OP features.</p>
                         </div>
                     </div>
                 </div>
